spacing fixed

--- a/static/index.css
+++ b/static/index.css
@@ -57,10 +57,12 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    position: relative;
 }
 .home-buttons{
-    padding-bottom: 150px;
+    max-height: 100%;
+    position: absolute;
+    top: 0;
 }
 
 .bodySection{
